# cargo-dist

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  dist-workspace.toml
.github/workflows/: ci.yml  release.yml
axoproject/: Cargo.toml
axoproject/src/: changelog.rs  tests.rs
book/src/ci/: customizing.md
cargo-dist/: Cargo.toml
cargo-dist-schema/src/: lib.rs
cargo-dist-schema/src/snapshots/: dist_schema__emit.snap
cargo-dist/src/: announce.rs  lib.rs  main.rs  platform.rs
cargo-dist/src/backend/ci/: github.rs  mod.rs
cargo-dist/src/backend/installer/: homebrew.rs  macpkg.rs  mod.rs  msi.rs
cargo-dist/src/config/: mod.rs  v0.rs  v0_to_v1.rs
cargo-dist/src/config/v1/: mod.rs
cargo-dist/src/config/v1/ci/: github.rs
cargo-dist/src/config/v1/installers/: homebrew.rs  mod.rs
cargo-dist/src/init/: apply_dist.rs  v0.rs
cargo-dist/src/platform/: github_runners.rs
cargo-dist/src/sign/: macos.rs
cargo-dist/src/tasks/: mod.rs
cargo-dist/templates/ci/github/: release.yml.j2
cargo-dist/templates/ci/github/partials/: publish_homebrew.yml.j2
cargo-dist/templates/installer/: homebrew.rb.j2  installer.sh.j2
cargo-dist/templates/installer/npm/: npm-shrinkwrap.json  package.json
cargo-dist/tests/: cli-tests.rs  integration-tests.rs
cargo-dist/tests/snapshots/: akaikatana_basic.snap  akaikatana_musl.snap  akaikatana_one_alias_among_many_binaries.snap  akaikatana_two_bin_aliases.snap  akaikatana_two_completion_cmds.snap  akaikatana_updaters.snap  axolotlsay_abyss.snap  axolotlsay_abyss_only.snap  axolotlsay_alias.snap  axolotlsay_alias_ignores_missing_bins.snap  axolotlsay_basic.snap  axolotlsay_basic_lies.snap  axolotlsay_build_setup_steps.snap  axolotlsay_checksum_blake2b.snap  axolotlsay_checksum_blake2s.snap  axolotlsay_checksum_sha3_256.snap  axolotlsay_checksum_sha3_512.snap  axolotlsay_cross1.snap  axolotlsay_cross2.snap  axolotlsay_custom_formula.snap  axolotlsay_custom_github_runners.snap  axolotlsay_disable_source_tarball.snap  axolotlsay_dispatch.snap  axolotlsay_dispatch_abyss.snap  axolotlsay_dispatch_abyss_only.snap  axolotlsay_dist_url_override.snap  axolotlsay_edit_existing.snap  axolotlsay_generic_workspace_basic.snap  axolotlsay_homebrew_linux_only.snap  axolotlsay_homebrew_macos_x86_64_only.snap  axolotlsay_homebrew_packages.snap  axolotlsay_macos_sign.snap  axolotlsay_musl.snap  axolotlsay_musl_no_gnu.snap  axolotlsay_no_homebrew_publish.snap  axolotlsay_no_locals.snap  axolotlsay_no_locals_but_custom.snap  axolotlsay_several_aliases.snap  axolotlsay_ssldotcom_windows_sign.snap  axolotlsay_ssldotcom_windows_sign_prod.snap  (+23 more)
