[workspace]
members = [
    "axoproject",
    "cargo-dist",
    "cargo-dist-schema",
    "vendor/axoasset",
    "vendor/axocli",
    "vendor/axoprocess",
    "vendor/axotag",
    "vendor/axoupdater",
    "vendor/gazenot",
]
resolver = "2"
exclude = ["axoproject/tests/projects/"]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/oxidecomputer/cargo-dist"
homepage = "https://opensource.axo.dev/cargo-dist/"
version = "1.0.1"
rust-version = "1.74"

[workspace.dependencies]
# intra-workspace deps (you need to bump these versions when you cut releases too!
dist-schema = { version = "=1.0.1", path = "cargo-dist-schema" }
axoproject = { version = "=1.0.1", path = "axoproject", default-features = false, features = ["cargo-projects", "generic-projects", "npm-projects"] }

# vendored first-party deps
axocli = { version = "0.2.0", path = "vendor/axocli" }
axoupdater = { version = "0.9.0", path = "vendor/axoupdater" }
axotag = { version = "0.2.0", path = "vendor/axotag" }
axoasset = { version = "1.2.0", path = "vendor/axoasset", features = ["json-serde", "toml-serde", "toml-edit", "yaml-serde", "compression", "remote"] }
axoprocess = { version = "0.2.0", path = "vendor/axoprocess" }
gazenot = { version = "0.3.3", path = "vendor/gazenot" }

# third-party deps
assert_fs = "1.1.3"
backon = "1.5.1"
backtrace = "0.3.75"
backtrace-ext = "0.2.1"
base64 = "0.22.1"
blake2 = "0.10.6"
camino = { version = "1.1.10", features = ["serde1"] }
cargo_metadata = "0.20.0"
cargo-wix = "0.3.8"
clap = { version = "4.5.40", features = ["derive"] }
clap-cargo = { version = "0.15.2" }
color-backtrace = "0.7.0"
comfy-table = "7.1.4"
console = { version = "0.15.10" }
current_platform = "0.2.0"
dialoguer = "0.11.0"
flate2 = "1.1.2"
goblin = "0.8.2"
guppy = "0.17.19"
homedir = "0.3.4"
httpmock = "0.7.0"
image = { version = "0.25.6", default-features = false }
include_dir = "0.7.4"
insta = { version = "1.43.1", features = ["filters"] }
itertools = "0.13.0"
lazy_static = "1.5.0"
liblzma = "0.4.1"
mach_object = "0.1"
miette = { version = "7.6.0" }
mime = "0.3.17"
minijinja = { version = "2.10.2", features = ["debug", "loader", "builtins", "json", "custom_syntax"] }
newline-converter = "0.3.0"
node-semver = "2.2.0"
oro-common = "0.3.34"
oro-package-spec = "0.3.34"
parse-changelog = "0.6.12"
pathdiff = { version = "0.2.3", features = ["camino"] }
reqwest = { version = "0.12.0", default-features = false }
schemars = "0.9.0"
self-replace = "1.5.0"
semver = "1.0.26"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }
serde_yaml = { version = "0.9.34" }
serial_test = "3.2.0"
sha2 = "0.10.9"
sha3 = "0.10.8"
similar = "2.7.0"
spdx = "0.10.8"
tar = "0.4.44"
target-lexicon = { version = "0.13.2", features = ["std"] }
temp-dir = "0.1.16"
tempfile = "3.20.0"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
toml = "0.8.23"
toml_edit = { version = "0.22.27" }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = "0.3.19"
url = "2.5.4"
uuid = { version = "1.17.0", features = ["v4"] }
walkdir = "2.5.0"
wiremock = "0.6.3"
zip = { version = "4.1.0", default-features = false, features = ["deflate"] }
zstd = { version = "0.13.0" }

[workspace.metadata.release]
shared-version = true
tag-name = "v{{version}}"
pre-release-commit-message = "release: {{version}}"
publish = false

[profile.dev]
# level true/2 is usually overkill, cf. <https://doc.rust-lang.org/cargo/reference/profiles.html#debug>
debug = "limited"
# thin-local LTO is basically free, cf. <https://doc.rust-lang.org/cargo/reference/profiles.html#lto>
lto = false
# this speeds up xz compression etc. significantly. we could
# be more selective about which packages to optimize but :shrug:
package."*" = { opt-level = 2 }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
