[package]
name = "axoproject"
description = "project detection logic for various axo.dev applications"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
exclude = [
  "book/*",
  "src/snapshots/*",
  "src/tests/",
  "tests/",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["generic-projects", "cargo-projects", "npm-projects"]
generic-projects = []
cargo-projects = ["guppy"]
npm-projects = ["oro-common", "oro-package-spec", "node-semver"]

[dependencies]
# it would be nice to inherit these features from workspace
# but you can't optional inherit workspace deps..?
guppy = { workspace = true, optional = true }
oro-common = { workspace = true, optional = true }
oro-package-spec = { workspace = true, optional = true }
node-semver = { workspace = true, optional = true }

axoasset.workspace = true
axoprocess.workspace = true

camino.workspace = true
miette.workspace = true
tracing.workspace = true
serde.workspace = true
thiserror.workspace = true
pathdiff.workspace = true
itertools.workspace = true
url.workspace = true
parse-changelog.workspace = true
semver.workspace = true
